# nagano-shoken-scrape

./: .gitignore  README.md  pyproject.toml
nagano_shoken_scrape/: driver.py
naganoshoken/: entrypoint.py  scraper.py
